Version 0.4
o test suite clean up (GNUmake):
  target "config" modified, phony without dependencies to other builds
  

Version 0.3
o added Linux PPC32 support
o added ARM THUMB mode support
o cosmetic changes, documentation updated
o bugfix: on cygwin exported C symbols in GNU as are prefixed with '_' now.

Version 0.2
o added scons build support
o configure variables all prefix CONFIG_* now
o configure variable INSTALL_DIR changed to INSTALL_PREFIX
o configure (shell version) option "--prefix" changed to "--prefix=<path>"

Version 0.1:
o initial release